[metadata]
name = CPTtool
version = 1.2
author = Bruno Zuada Coelho, Eleni Smyrniou, Maarten Pronk
author_email = Bruno.ZuadaCoelho@deltares.nl, Eleni.Smyrniou@deltares.nl, Maarten.Pronk@deltares.nl
description = CPT tool for the OURS model
classifiers =
    Programming Language :: Python :: 3
    License ::EUPL
    Operating System :: OS Independent

[options]
packages = CPTtool
include_package_data = True
install_requires =
    coverage==6.3.1
    numpy==1.22.1
    matplotlib==3.5.1
    netcdf4==1.5.8
    pandas==1.4.0
    pyproj==3.3.0
    pyshp==2.1.3
    scipy==1.7.3
    more-itertools==8.12.0
    rtree==1.0.1
    tqdm==4.62.3
    sphinx==4.4.0
    sphinxcontrib-bibtex==2.4.1
    geopandas==0.13.2
python_requires >= 3.10
