[metadata]
name = CPTtool
version = 2.1
author = Bruno Zuada Coelho, Eleni Smyrniou, Maarten Pronk
author_email = Bruno.ZuadaCoelho@deltares.nl, Eleni.Smyrniou@deltares.nl, Maarten.Pronk@deltares.nl
description = CPT tool for the OURS model
classifiers =
    Programming Language :: Python :: 3
    License ::EUPL
    Operating System :: OS Independent

[options]
packages = CPTtool
include_package_data = True
install_requires =
    numpy>=1.26
    matplotlib>=3.8
    netcdf4>=1.6.4
    pandas>=1.5
    pyproj>=3.6
    scipy>=1.11
    more-itertools>=8.14
    rtree>=1.0
    tqdm>=4.62
    geopandas>=0.14
python_requires >= 3.10

[options.extras_require]
testing =
    pytest>=7.4
    coverage>=7.3
    sphinx>=7.2
    sphinxcontrib-bibtex>=2.6
    pyshp>=2.3
    broreader@git+https://github.com/PlatypusBytes/GeoDataReader.git
